--- a/LiteratureManage/.classpath
+++ b/LiteratureManage/.classpath
@@ -8,5 +8,6 @@
 			<attribute name="owner.project.facets" value="java"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="C:/Users/Lenovo/Documents/software/struts-2.5.2/lib/json-lib-2.3-jdk15.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
